--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAIA2 - Магический Кофе</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- Контейнер для фоновых картинок -->
     <div class="background-container">
-        <img src="fon2.jpg" class="bg-image bg3">
-        <img src="fon1.jpg" class="bg-image bg2">
-        <img src="fon.jpg" class="bg-image bg1">
+        <img src="img/fon.jpg" class="bg-image bg3">
+        <img src="img/fon1.jpg" class="bg-image bg2">
+        <img src="img/fon2.jpg" class="bg-image bg1">
     </div>
 
     <!-- Слой для эффекта "затмевания" -->
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="logo2.png" alt="GAIA"></a>
+                <a href="index.html"><img src="img/logo2.png" alt="GAIA"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="menu.html">Меню</a></li>
@@ -46,6 +46,28 @@
             </h1>
             <p>Магическая кофейня GAIA – место, где уют сочетается с волшебством!</p>
             <button class="magic-button">✨ Открыть меню ✨</button>
+        </section>
+        <section class="advantages-section">
+            <h2>Наши преимущества</h2>
+            <div class="advantages-image-container">
+                <img src="img/advantages.jpg" alt="фоновое фото преимуществ">
+                <div class="advantages-list">
+                    <div class="advantage-item">
+                        <span class="advantage-number">1</span>
+                        <p class="advantage-text">Высокое качество кофе</p>
+                    </div>
+                    <div class="advantage-separator"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-number">2</span>
+                        <p class="advantage-text">Уютная атмосфера</p>
+                    </div>
+                    <div class="advantage-separator"></div>
+                    <div class="advantage-item">
+                        <span class="advantage-number">3</span>
+                        <p class="advantage-text">Гадания и предсказания</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
